# ConiCrypt-Lab

./: .gitignore  README.md
App/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
App/src/: App.tsx  env.ts  main.tsx
App/src-tauri/: Cargo.toml  tauri.conf.json
App/src-tauri/src/: lib.rs  main.rs  ws.rs
App/src/components/buttons/: button.module.css  button.tsx
App/src/components/data/: calendar.module.css  calendar.tsx  carousel.tsx  chart.tsx  pagination.tsx
App/src/components/inputs/: progress.tsx  radio-group.tsx  switch.tsx  textarea.tsx
App/src/components/modals/: alert-dialog.tsx
App/src/components/nav/: FloatingDock.module.css  FloatingDock.tsx  breadcrumb.tsx  menubar.tsx  navigation-menu.tsx  sidebar.tsx
App/src/components/overlay/: Terminal.tsx  command.tsx  context-menu.tsx
App/src/components/ui/: InterpretationGrid.tsx  MetaCard.tsx  TypingText.tsx
App/src/components/visual/: CustomCursor.tsx  WireframeGeometryBackground.tsx  avatar.tsx
App/src/modules/Header/: CoreAnimatedIcon.tsx  DBAnimatedIcon.tsx  Header.module.css  Header.tsx  PyVizAnimatedIcon.tsx  WifiAnimatedIcon.tsx
App/src/modules/conic-analysis/: ConicAnalysis.module.css  ConicAnalysis.tsx
App/src/modules/dashboard/: Dashboard.module.css  Dashboard.tsx
App/src/modules/video-terminal/: HandTracking.tsx  VideoTerminalPanel.module.css  VideoTerminalPanel.tsx
App/src/styles/: globals.css
Core/: Makefile
Core/src/: conics.c  conics.h  ecc.c  ecc.h  main.c
Data/: conic.json
Docker/: .env  .env.example  Dockerfile  Dockerfile.core  Dockerfile.frontend  Dockerfile.python  docker-compose.yml  startup_app.sh
Python/: mano.py  plot_conics.py  requirements.txt  server.py
Scripts/: run_all.sh
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  process.rs  ws.rs
app/src/components/common/: Button.tsx  Input.tsx
app/src/components/controls/: ConicControls.tsx  ECCControls.tsx
app/src/components/feedback/: ConnectionStatus.tsx  LogConsole.tsx
app/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
app/src/components/visualization/: AxesGrid.tsx  ConicView.tsx  ECCView.tsx  SceneCanvas.tsx
app/src/lib/: conics.ts  ecc.ts  logger.ts  socket.ts
app/src/pages/: ConicsPage.tsx  ECCPage.tsx  HomePage.tsx
app/src/state/: useAppStore.ts  useConicStore.ts  useECCStore.ts
app/src/styles/: globals.css  theme.css
app/src/types/: conic.d.ts  ecc.d.ts  socket.d.ts
core/: Makefile
core/src/: conics.c  conics.h  ecc.c  ecc.h  main.c  utils.c  utils.h
data/: sample_conic.json  sample_ecc.json
scripts/: clean.sh  run_all.sh  test.sh
