[package]
name = "tauri-appconicrypt-lab"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appconicrypt_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [] }
tokio = { version = "1", features = ["full"] } # Cambiado a "full" para soporte completo
futures-util = "0.3"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
# reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # <- solo si llamas HTTP
# urlencoding = "2"   

[features]
custom-protocol = ["tauri/custom-protocol"] # <- útil para querystrings


