[package]
name = "tauri-appconicrypt-lab"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_appconicrypt_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = [] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
